--- a/data/lang/bg.xml
+++ b/data/lang/bg.xml
@@ -200,6 +200,7 @@
     <tank ID="Ch39_WZ120_1G_FT" sName="WZ-120-1 FT" lName="WZ-120-1G FT" />
     <tank ID="Ch40_WZ120G_FT" sName="WZ-120G FT" lName="WZ-120G FT" />
     <tank ID="Ch41_WZ_111_5A" sName="WZ-111 5A" lName="WZ-111 model 5A" />
+    <tank ID="Ch41_WZ_111_QL" sName="WZ-111 QL" lName="WZ-111 Qilin" />
     <tank ID="Chi_Ha" sName="Chi-Ha" lName="Type 97 Chi-Ha" />
     <tank ID="Chi_He" sName="Chi-He" lName="Type 1 Chi-He" />
     <tank ID="Chi_Ni" sName="Chi-Ni" lName="Chi-Ni" />
@@ -1084,6 +1085,7 @@
     <item ID="112_eiffel_tower" Name="Опустошена столица" />
     <item ID="112_eiffel_tower_ctf" Name="Париж" />
     <item ID="114_czech" Name="Пилзен" />
+    <item ID="115_sweden" Name="Ледник" />
     <item ID="116_himmelball" Name="Стадион \&quot;Химелсдорф\&quot;" />
     <item ID="117_eiffelball" Name="Стадион \&quot;Айфел\&quot;" />
     <item ID="118_lostcityball" Name="Забравеният стадион" />
@@ -1108,7 +1110,7 @@
     <item ID="35_steppes" Name="Степи" />
     <item ID="36_fishing_bay" Name="Рибарски залив" />
     <item ID="37_caucasus" Name="Клисура" />
-    <item ID="38_mannerheim_line" Name="Арктика" />
+    <item ID="38_mannerheim_line" Name="Линията \&quot;Манерхайм\&quot;" />
     <item ID="39_crimea" Name="Южен бряг" />
     <item ID="43_north_america" Name="Северозапад" />
     <item ID="44_north_america" Name="Лайв Окс" />
@@ -1323,6 +1325,7 @@
     <achv ID_Num="118" ID="tankExpert6" Name="Експерт: Япония" />
     <achv ID_Num="119" ID="tankExpert7" Name="Експерт: Чехословакия" />
     <achv ID_Num="120" ID="tankExpert8" Name="Експерт: Швеция" />
+    <achv ID_Num="122" ID="tankExpert10" Name="Експерт: Италия" />
     <achv ID_Num="127" ID="mechanicEngineer0" Name="Инженер-механик: СССР" />
     <achv ID_Num="128" ID="mechanicEngineer1" Name="Инженер-механик: Германия" />
     <achv ID_Num="129" ID="mechanicEngineer2" Name="Инженер-механик: САЩ" />
@@ -1333,6 +1336,7 @@
     <achv ID_Num="134" ID="mechanicEngineer7" Name="Инженер-механик: Чехословакия" />
     <achv ID_Num="135" ID="mechanicEngineer8" Name="Инженер-механик: Швеция" />
     <achv ID_Num="136" ID="mechanicEngineer9" Name="Инженер-механик: Полша" />
+    <achv ID_Num="137" ID="mechanicEngineer10" Name="Инженер-механик: Италия" />
     <achv ID_Num="143" ID="medalBrothersInArms" Name="Братя по оръжие" />
     <achv ID_Num="144" ID="medalCrucialContribution" Name="Решаващ принос" />
     <achv ID_Num="145" ID="medalDeLanglade" Name="Медал дьо Ланглад" />
@@ -2073,7 +2077,7 @@
     <PM name="САУ-6: Чукът на Тор" short="\&quot;StuG IV\&quot;: САУ-6" desc="Основната цел на САУ е да осигурява огнева поддръжка на съюзническите машини. Зашеметените вражески машини са слаби бойци, така че съотборниците ви със сигурност ще оценят помощта ви. Но внимавайте при стрелба - невнимателен изстрел може да зашемети и съюзник. Приятелският огън няма да бъде толериран." tMID="66" opID="1" mID="6" setID="5" ID="quest_1_5_6_main" secID="quest_1_5_6_add" minLvl="4" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="\&quot;StuG IV\&quot;">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 2 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 2 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -2787,7 +2791,7 @@ or
     <PM name="САУ-6: Чукът на Тор" short="\&quot;T28 heavy tank concept\&quot;: САУ-6" desc="Основната цел на САУ е да осигурява огнева поддръжка на съюзническите машини. Зашеметените вражески машини са слаби бойци, така че съотборниците ви със сигурност ще оценят помощта ви. Но внимавайте при стрелба - невнимателен изстрел може да зашемети и съюзник. Приятелският огън няма да бъде толериран." tMID="141" opID="2" mID="6" setID="5" ID="quest_2_5_6_main" secID="quest_2_5_6_add" minLvl="5" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="\&quot;T28 heavy tank concept\&quot;">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 3 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 3 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -3516,7 +3520,7 @@ or
     <PM name="САУ-6: Чукът на Тор" short="T 55A: САУ-6" desc="Основната цел на САУ е да осигурява огнева поддръжка на съюзническите машини. Зашеметените вражески машини са слаби бойци, така че съотборниците ви със сигурност ще оценят помощта ви. Но внимавайте при стрелба - невнимателен изстрел може да зашемети и съюзник. Приятелският огън няма да бъде толериран." tMID="216" opID="3" mID="6" setID="5" ID="quest_3_5_6_main" secID="quest_3_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 5 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 5 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -4250,7 +4254,7 @@ or
     <PM name="САУ-6: Чукът на Тор" short="\&quot;Обект 260\&quot;: САУ-6" desc="Основната цел на САУ е да осигурява огнева поддръжка на съюзническите машини. Зашеметените вражески машини са слаби бойци, така че съотборниците ви със сигурност ще оценят помощта ви. Но внимавайте при стрелба - невнимателен изстрел може да зашемети и съюзник. Приятелският огън няма да бъде толериран." tMID="291" opID="4" mID="6" setID="5" ID="quest_4_5_6_main" secID="quest_4_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="\&quot;Обект 260\&quot;">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 6 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 6 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -4960,7 +4964,7 @@ or
     <PM name="САУ-6: Чукът на Тор" short="\&quot;StuG IV\&quot;: САУ-6" desc="Основната цел на САУ е да осигурява огнева поддръжка на съюзническите машини. Зашеметените вражески машини са слаби бойци, така че съотборниците ви със сигурност ще оценят помощта ви. Но внимавайте при стрелба - невнимателен изстрел може да зашемети и съюзник. Приятелският огън няма да бъде толериран." tMID="66" opID="1" mID="6" setID="5" ID="fallout_1_5_6_main" secID="fallout_1_5_6_add" minLvl="4" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="\&quot;StuG IV\&quot;">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 2 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 2 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -5674,7 +5678,7 @@ or
     <PM name="САУ-6: Чукът на Тор" short="\&quot;T28 heavy tank concept\&quot;: САУ-6" desc="Основната цел на САУ е да осигурява огнева поддръжка на съюзническите машини. Зашеметените вражески машини са слаби бойци, така че съотборниците ви със сигурност ще оценят помощта ви. Но внимавайте при стрелба - невнимателен изстрел може да зашемети и съюзник. Приятелският огън няма да бъде толериран." tMID="141" opID="2" mID="6" setID="5" ID="fallout_2_5_6_main" secID="fallout_2_5_6_add" minLvl="5" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="\&quot;T28 heavy tank concept\&quot;">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 3 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 3 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -6403,7 +6407,7 @@ or
     <PM name="САУ-6: Чукът на Тор" short="T 55A: САУ-6" desc="Основната цел на САУ е да осигурява огнева поддръжка на съюзническите машини. Зашеметените вражески машини са слаби бойци, така че съотборниците ви със сигурност ще оценят помощта ви. Но внимавайте при стрелба - невнимателен изстрел може да зашемети и съюзник. Приятелският огън няма да бъде толериран." tMID="216" opID="3" mID="6" setID="5" ID="fallout_3_5_6_main" secID="fallout_3_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 5 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 5 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -7137,7 +7141,7 @@ or
     <PM name="САУ-6: Чукът на Тор" short="\&quot;Обект 260\&quot;: САУ-6" desc="Основната цел на САУ е да осигурява огнева поддръжка на съюзническите машини. Зашеметените вражески машини са слаби бойци, така че съотборниците ви със сигурност ще оценят помощта ви. Но внимавайте при стрелба - невнимателен изстрел може да зашемети и съюзник. Приятелският огън няма да бъде толериран." tMID="291" opID="4" mID="6" setID="5" ID="fallout_4_5_6_main" secID="fallout_4_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="\&quot;Обект 260\&quot;">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 6 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 6 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Win
