--- a/data/lang/fr.xml
+++ b/data/lang/fr.xml
@@ -200,6 +200,7 @@
     <tank ID="Ch39_WZ120_1G_FT" sName="WZ-120-1 FT" lName="WZ-120-1G FT" />
     <tank ID="Ch40_WZ120G_FT" sName="WZ-120G FT" lName="WZ-120G FT" />
     <tank ID="Ch41_WZ_111_5A" sName="WZ-111 5A" lName="WZ-111 model 5A" />
+    <tank ID="Ch41_WZ_111_QL" sName="WZ-111 QL" lName="WZ-111 Qilin" />
     <tank ID="Chi_Ha" sName="Chi-Ha" lName="Type 97 Chi-Ha" />
     <tank ID="Chi_He" sName="Chi-He" lName="Type 1 Chi-He" />
     <tank ID="Chi_Ni" sName="Chi-Ni" lName="Chi-Ni" />
@@ -1084,6 +1085,7 @@
     <item ID="112_eiffel_tower" Name="Capitale ravagée" />
     <item ID="112_eiffel_tower_ctf" Name="Paris" />
     <item ID="114_czech" Name="Pilsen" />
+    <item ID="115_sweden" Name="Glacier" />
     <item ID="116_himmelball" Name="Stade d'Himmelsdorf" />
     <item ID="117_eiffelball" Name="Stade Eiffel" />
     <item ID="118_lostcityball" Name="Old Tankford" />
@@ -1108,7 +1110,7 @@
     <item ID="35_steppes" Name="Steppes" />
     <item ID="36_fishing_bay" Name="Baie du pêcheur" />
     <item ID="37_caucasus" Name="Col de montagne" />
-    <item ID="38_mannerheim_line" Name="Arctique" />
+    <item ID="38_mannerheim_line" Name="Ligne Mannerheim" />
     <item ID="39_crimea" Name="Côte Sud" />
     <item ID="43_north_america" Name="Nord-Ouest" />
     <item ID="44_north_america" Name="Live Oaks" />
@@ -1323,6 +1325,7 @@
     <achv ID_Num="118" ID="tankExpert6" Name="Expert : Japon" />
     <achv ID_Num="119" ID="tankExpert7" Name="Expert : Tchécoslovaquie" />
     <achv ID_Num="120" ID="tankExpert8" Name="Expert : Suède" />
+    <achv ID_Num="122" ID="tankExpert10" Name="Expert : Italie" />
     <achv ID_Num="127" ID="mechanicEngineer0" Name="Ingénieur technique : U.R.S.S." />
     <achv ID_Num="128" ID="mechanicEngineer1" Name="Ingénieur technique: Allemagne" />
     <achv ID_Num="129" ID="mechanicEngineer2" Name="Ingénieur technique: U.S.A." />
@@ -1333,6 +1336,7 @@
     <achv ID_Num="134" ID="mechanicEngineer7" Name="Ingénieur technique : Tchécoslovaquie" />
     <achv ID_Num="135" ID="mechanicEngineer8" Name="Ingénieur technique : Suède" />
     <achv ID_Num="136" ID="mechanicEngineer9" Name="Ingénieur technique : Pologne" />
+    <achv ID_Num="137" ID="mechanicEngineer10" Name="Ingénieur technique : Italie" />
     <achv ID_Num="143" ID="medalBrothersInArms" Name="Frères d'armes" />
     <achv ID_Num="144" ID="medalCrucialContribution" Name="Contribution décisive" />
     <achv ID_Num="145" ID="medalDeLanglade" Name="Médaille de De Langlade" />
@@ -2073,7 +2077,7 @@
     <PM name="Canon AM-6 : Le marteau des dieux" short="StuG IV: Canon AM-6 " desc="Le principal objectif des canons automoteurs consiste à fournir des tirs d'appui aux véhicules alliés. Les véhicules ennemis étourdis deviennent de piètres combattants, vos coéquipiers apprécieront probablement votre aide. Toutefois, prenez garde avant de tirer : un tir imprudent peut également étourdir un véhicule allié. Les tirs fratricides ne sont pas tolérés." tMID="66" opID="1" mID="6" setID="5" ID="quest_1_5_6_main" secID="quest_1_5_6_add" minLvl="4" maxLvl="10" campID="1" camp="Les renforts tant attendus" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Permettre à vos alliés d'infliger des dégâts à 2 véhicules en les étourdissant ou en les immobilisant</req>
+        <req>•  Permettre à vos alliés d'infliger des dégâts à 2 véhicules différents en les étourdissant ou en les immobilisant</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Gagner</req>
@@ -2787,7 +2791,7 @@ ou
     <PM name="Canon AM-6 : Le marteau des dieux" short="T28 Heavy Tank Concept: Canon AM-6 " desc="Le principal objectif des canons automoteurs consiste à fournir des tirs d'appui aux véhicules alliés. Les véhicules ennemis étourdis deviennent de piètres combattants, vos coéquipiers apprécieront probablement votre aide. Toutefois, prenez garde avant de tirer : un tir imprudent peut également étourdir un véhicule allié. Les tirs fratricides ne sont pas tolérés." tMID="141" opID="2" mID="6" setID="5" ID="quest_2_5_6_main" secID="quest_2_5_6_add" minLvl="5" maxLvl="10" campID="1" camp="Les renforts tant attendus" reward="T28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Permettre à vos alliés d'infliger des dégâts à 3 véhicules en les étourdissant ou en les immobilisant</req>
+        <req>•  Permettre à vos alliés d'infliger des dégâts à 3 véhicules différents en les étourdissant ou en les immobilisant</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Gagner</req>
@@ -3516,7 +3520,7 @@ ou
     <PM name="Canon AM-6 : Le marteau des dieux" short="T 55A: Canon AM-6 " desc="Le principal objectif des canons automoteurs consiste à fournir des tirs d'appui aux véhicules alliés. Les véhicules ennemis étourdis deviennent de piètres combattants, vos coéquipiers apprécieront probablement votre aide. Toutefois, prenez garde avant de tirer : un tir imprudent peut également étourdir un véhicule allié. Les tirs fratricides ne sont pas tolérés." tMID="216" opID="3" mID="6" setID="5" ID="quest_3_5_6_main" secID="quest_3_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Les renforts tant attendus" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Permettre à vos alliés d'infliger des dégâts à 5 véhicules en les étourdissant ou en les immobilisant</req>
+        <req>•  Permettre à vos alliés d'infliger des dégâts à 5 véhicules différents en les étourdissant ou en les immobilisant</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Gagner
@@ -4250,7 +4254,7 @@ ou
     <PM name="Canon AM-6 : Le marteau des dieux" short="Object 260: Canon AM-6 " desc="Le principal objectif des canons automoteurs consiste à fournir des tirs d'appui aux véhicules alliés. Les véhicules ennemis étourdis deviennent de piètres combattants, vos coéquipiers apprécieront probablement votre aide. Toutefois, prenez garde avant de tirer : un tir imprudent peut également étourdir un véhicule allié. Les tirs fratricides ne sont pas tolérés." tMID="291" opID="4" mID="6" setID="5" ID="quest_4_5_6_main" secID="quest_4_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Les renforts tant attendus" reward="Object 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Permettre à vos alliés d'infliger des dégâts à 6 véhicules en les étourdissant ou en les immobilisant</req>
+        <req>•  Permettre à vos alliés d'infliger des dégâts à 6 véhicules différents en les étourdissant ou en les immobilisant</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Gagner
@@ -4960,7 +4964,7 @@ ou
     <PM name="Canon AM-6 : Le marteau des dieux" short="StuG IV: Canon AM-6 " desc="Le principal objectif des canons automoteurs consiste à fournir des tirs d'appui aux véhicules alliés. Les véhicules ennemis étourdis deviennent de piètres combattants, vos coéquipiers apprécieront probablement votre aide. Toutefois, prenez garde avant de tirer : un tir imprudent peut également étourdir un véhicule allié. Les tirs fratricides ne sont pas tolérés." tMID="66" opID="1" mID="6" setID="5" ID="fallout_1_5_6_main" secID="fallout_1_5_6_add" minLvl="4" maxLvl="10" campID="1" camp="Les renforts tant attendus" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Permettre à vos alliés d'infliger des dégâts à 2 véhicules en les étourdissant ou en les immobilisant</req>
+        <req>•  Permettre à vos alliés d'infliger des dégâts à 2 véhicules différents en les étourdissant ou en les immobilisant</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Gagner</req>
@@ -5674,7 +5678,7 @@ ou
     <PM name="Canon AM-6 : Le marteau des dieux" short="T28 Heavy Tank Concept: Canon AM-6 " desc="Le principal objectif des canons automoteurs consiste à fournir des tirs d'appui aux véhicules alliés. Les véhicules ennemis étourdis deviennent de piètres combattants, vos coéquipiers apprécieront probablement votre aide. Toutefois, prenez garde avant de tirer : un tir imprudent peut également étourdir un véhicule allié. Les tirs fratricides ne sont pas tolérés." tMID="141" opID="2" mID="6" setID="5" ID="fallout_2_5_6_main" secID="fallout_2_5_6_add" minLvl="5" maxLvl="10" campID="1" camp="Les renforts tant attendus" reward="T28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Permettre à vos alliés d'infliger des dégâts à 3 véhicules en les étourdissant ou en les immobilisant</req>
+        <req>•  Permettre à vos alliés d'infliger des dégâts à 3 véhicules différents en les étourdissant ou en les immobilisant</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Gagner</req>
@@ -6403,7 +6407,7 @@ ou
     <PM name="Canon AM-6 : Le marteau des dieux" short="T 55A: Canon AM-6 " desc="Le principal objectif des canons automoteurs consiste à fournir des tirs d'appui aux véhicules alliés. Les véhicules ennemis étourdis deviennent de piètres combattants, vos coéquipiers apprécieront probablement votre aide. Toutefois, prenez garde avant de tirer : un tir imprudent peut également étourdir un véhicule allié. Les tirs fratricides ne sont pas tolérés." tMID="216" opID="3" mID="6" setID="5" ID="fallout_3_5_6_main" secID="fallout_3_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Les renforts tant attendus" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Permettre à vos alliés d'infliger des dégâts à 5 véhicules en les étourdissant ou en les immobilisant</req>
+        <req>•  Permettre à vos alliés d'infliger des dégâts à 5 véhicules différents en les étourdissant ou en les immobilisant</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Gagner
@@ -7137,7 +7141,7 @@ ou
     <PM name="Canon AM-6 : Le marteau des dieux" short="Object 260: Canon AM-6 " desc="Le principal objectif des canons automoteurs consiste à fournir des tirs d'appui aux véhicules alliés. Les véhicules ennemis étourdis deviennent de piètres combattants, vos coéquipiers apprécieront probablement votre aide. Toutefois, prenez garde avant de tirer : un tir imprudent peut également étourdir un véhicule allié. Les tirs fratricides ne sont pas tolérés." tMID="291" opID="4" mID="6" setID="5" ID="fallout_4_5_6_main" secID="fallout_4_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Les renforts tant attendus" reward="Object 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Permettre à vos alliés d'infliger des dégâts à 6 véhicules en les étourdissant ou en les immobilisant</req>
+        <req>•  Permettre à vos alliés d'infliger des dégâts à 6 véhicules différents en les étourdissant ou en les immobilisant</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Gagner
