--- a/data/lang/hr.xml
+++ b/data/lang/hr.xml
@@ -200,6 +200,7 @@
     <tank ID="Ch39_WZ120_1G_FT" sName="WZ-120-1 FT" lName="WZ-120-1G FT" />
     <tank ID="Ch40_WZ120G_FT" sName="WZ-120G FT" lName="WZ-120G FT" />
     <tank ID="Ch41_WZ_111_5A" sName="WZ-111 5A" lName="WZ-111 model 5A" />
+    <tank ID="Ch41_WZ_111_QL" sName="WZ-111 QL" lName="WZ-111 Qilin" />
     <tank ID="Chi_Ha" sName="Chi-Ha" lName="Type 97 Chi-Ha" />
     <tank ID="Chi_He" sName="Chi-He" lName="Type 1 Chi-He" />
     <tank ID="Chi_Ni" sName="Chi-Ni" lName="Chi-Ni" />
@@ -1084,6 +1085,7 @@
     <item ID="112_eiffel_tower" Name="Opustošena prijestolnica" />
     <item ID="112_eiffel_tower_ctf" Name="Pariz" />
     <item ID="114_czech" Name="Plzen" />
+    <item ID="115_sweden" Name="Ledenjak" />
     <item ID="116_himmelball" Name="Himmelsdorf Arena" />
     <item ID="117_eiffelball" Name="Stade Eiffel" />
     <item ID="118_lostcityball" Name="Old Tankford" />
@@ -1108,7 +1110,7 @@
     <item ID="35_steppes" Name="Stepe" />
     <item ID="36_fishing_bay" Name="Ribarev zaljev" />
     <item ID="37_caucasus" Name="Prijevoj" />
-    <item ID="38_mannerheim_line" Name="Polarno područje" />
+    <item ID="38_mannerheim_line" Name="Mannerheimova linija" />
     <item ID="39_crimea" Name="Južna obala" />
     <item ID="43_north_america" Name="Sjeverozapad" />
     <item ID="44_north_america" Name="Live Oaks" />
@@ -1127,7 +1129,7 @@
     <item ID="87_ruinberg_on_fire" Name="Ruinberg u vatri" />
     <item ID="92_stalingrad" Name="Staljingrad" />
     <item ID="94_battlecity" />
-    <item ID="95_lost_city" Name="Grad Duhova" />
+    <item ID="95_lost_city" Name="Grad duhova" />
     <item ID="96_prohorovka_defense" Name="Vatrena izbočina" />
     <item ID="99_himmelball" Name="Prvensto Himmelsdorf" />
     <item ID="unknown" Name="Nepoznati" />
@@ -1323,6 +1325,7 @@
     <achv ID_Num="118" ID="tankExpert6" Name="Stručnjak: Japan" />
     <achv ID_Num="119" ID="tankExpert7" Name="Stručnjak: Čehoslovačka" />
     <achv ID_Num="120" ID="tankExpert8" Name="Stručnjak: Švedska" />
+    <achv ID_Num="122" ID="tankExpert10" Name="Stručnjak: Italija" />
     <achv ID_Num="127" ID="mechanicEngineer0" Name="Tehnički inžinjer: SSSR" />
     <achv ID_Num="128" ID="mechanicEngineer1" Name="Tehnički inžinjer: Njemačka" />
     <achv ID_Num="129" ID="mechanicEngineer2" Name="Tehnički inžinjer: SAD" />
@@ -1333,6 +1336,7 @@
     <achv ID_Num="134" ID="mechanicEngineer7" Name="Tehnički inžinjer: Čehoslovačka" />
     <achv ID_Num="135" ID="mechanicEngineer8" Name="Tehnički inžinjer: Švedska" />
     <achv ID_Num="136" ID="mechanicEngineer9" Name="Tehnički inžinjer: Poljska" />
+    <achv ID_Num="137" ID="mechanicEngineer10" Name="Tehnički inžinjer: Italija" />
     <achv ID_Num="143" ID="medalBrothersInArms" Name="Braća po oružju" />
     <achv ID_Num="144" ID="medalCrucialContribution" Name="Odlučujuči doprinos" />
     <achv ID_Num="145" ID="medalDeLanglade" Name="De Langladeova medalja" />
@@ -2073,7 +2077,7 @@
     <PM name="ShT-6: Malj bogova" short="StuG IV: ShT-6" desc="Primarni cilj samohodnih topova je pružanje vatrene potpore saveznicima. Ošamućena neprijateljska vozila su slabi borci i vaši suigrači će znati cijeniti vašu pomoć. Međutim, budite pažljivi kada pucate: aljkavi hitac može ošamutiti i savezničko vozilo. Prijateljska paljba se ne će tolerirati." tMID="66" opID="1" mID="6" setID="5" ID="quest_1_5_6_main" secID="quest_1_5_6_add" minLvl="4" maxLvl="10" campID="1" camp="Dugoočekivana podrška" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 2 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 2 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -2787,7 +2791,7 @@ or
     <PM name="ShT-6: Malj bogova" short="T28 Heavy Tank Concept: ShT-6" desc="Primarni cilj samohodnih topova je pružanje vatrene potpore saveznicima. Ošamućena neprijateljska vozila su slabi borci i vaši suigrači će znati cijeniti vašu pomoć. Međutim, budite pažljivi kada pucate: aljkavi hitac može ošamutiti i savezničko vozilo. Prijateljska paljba se ne će tolerirati." tMID="141" opID="2" mID="6" setID="5" ID="quest_2_5_6_main" secID="quest_2_5_6_add" minLvl="5" maxLvl="10" campID="1" camp="Dugoočekivana podrška" reward="T28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 3 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 3 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -3516,7 +3520,7 @@ or
     <PM name="ShT-6: Malj bogova" short="T 55A: ShT-6" desc="Primarni cilj samohodnih topova je pružanje vatrene potpore saveznicima. Ošamućena neprijateljska vozila su slabi borci i vaši suigrači će znati cijeniti vašu pomoć. Međutim, budite pažljivi kada pucate: aljkavi hitac može ošamutiti i savezničko vozilo. Prijateljska paljba se ne će tolerirati." tMID="216" opID="3" mID="6" setID="5" ID="quest_3_5_6_main" secID="quest_3_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Dugoočekivana podrška" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 5 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 5 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -4250,7 +4254,7 @@ or
     <PM name="ShT-6: Malj bogova" short="Object 260: ShT-6" desc="Primarni cilj samohodnih topova je pružanje vatrene potpore saveznicima. Ošamućena neprijateljska vozila su slabi borci i vaši suigrači će znati cijeniti vašu pomoć. Međutim, budite pažljivi kada pucate: aljkavi hitac može ošamutiti i savezničko vozilo. Prijateljska paljba se ne će tolerirati." tMID="291" opID="4" mID="6" setID="5" ID="quest_4_5_6_main" secID="quest_4_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Dugoočekivana podrška" reward="Object 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 6 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 6 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -4960,7 +4964,7 @@ or
     <PM name="ShT-6: Malj bogova" short="StuG IV: ShT-6" desc="Primarni cilj samohodnih topova je pružanje vatrene potpore saveznicima. Ošamućena neprijateljska vozila su slabi borci i vaši suigrači će znati cijeniti vašu pomoć. Međutim, budite pažljivi kada pucate: aljkavi hitac može ošamutiti i savezničko vozilo. Prijateljska paljba se ne će tolerirati." tMID="66" opID="1" mID="6" setID="5" ID="fallout_1_5_6_main" secID="fallout_1_5_6_add" minLvl="4" maxLvl="10" campID="1" camp="Dugoočekivana podrška" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 2 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 2 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -5674,7 +5678,7 @@ or
     <PM name="ShT-6: Malj bogova" short="T28 Heavy Tank Concept: ShT-6" desc="Primarni cilj samohodnih topova je pružanje vatrene potpore saveznicima. Ošamućena neprijateljska vozila su slabi borci i vaši suigrači će znati cijeniti vašu pomoć. Međutim, budite pažljivi kada pucate: aljkavi hitac može ošamutiti i savezničko vozilo. Prijateljska paljba se ne će tolerirati." tMID="141" opID="2" mID="6" setID="5" ID="fallout_2_5_6_main" secID="fallout_2_5_6_add" minLvl="5" maxLvl="10" campID="1" camp="Dugoočekivana podrška" reward="T28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 3 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 3 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -6403,7 +6407,7 @@ or
     <PM name="ShT-6: Malj bogova" short="T 55A: ShT-6" desc="Primarni cilj samohodnih topova je pružanje vatrene potpore saveznicima. Ošamućena neprijateljska vozila su slabi borci i vaši suigrači će znati cijeniti vašu pomoć. Međutim, budite pažljivi kada pucate: aljkavi hitac može ošamutiti i savezničko vozilo. Prijateljska paljba se ne će tolerirati." tMID="216" opID="3" mID="6" setID="5" ID="fallout_3_5_6_main" secID="fallout_3_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Dugoočekivana podrška" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 5 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 5 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -7137,7 +7141,7 @@ or
     <PM name="ShT-6: Malj bogova" short="Object 260: ShT-6" desc="Primarni cilj samohodnih topova je pružanje vatrene potpore saveznicima. Ošamućena neprijateljska vozila su slabi borci i vaši suigrači će znati cijeniti vašu pomoć. Međutim, budite pažljivi kada pucate: aljkavi hitac može ošamutiti i savezničko vozilo. Prijateljska paljba se ne će tolerirati." tMID="291" opID="4" mID="6" setID="5" ID="fallout_4_5_6_main" secID="fallout_4_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Dugoočekivana podrška" reward="Object 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 6 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 6 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Win
