--- a/data/lang/lt.xml
+++ b/data/lang/lt.xml
@@ -200,6 +200,7 @@
     <tank ID="Ch39_WZ120_1G_FT" sName="WZ-120-1 FT" lName="WZ-120-1G FT" />
     <tank ID="Ch40_WZ120G_FT" sName="WZ-120G FT" lName="WZ-120G FT" />
     <tank ID="Ch41_WZ_111_5A" sName="WZ-111 5A" lName="WZ-111 model 5A" />
+    <tank ID="Ch41_WZ_111_QL" sName="WZ-111 QL" lName="WZ-111 Qilin" />
     <tank ID="Chi_Ha" sName="Chi-Ha" lName="Type 97 Chi-Ha" />
     <tank ID="Chi_He" sName="Chi-He" lName="Type 1 Chi-He" />
     <tank ID="Chi_Ni" sName="Chi-Ni" lName="Chi-Ni" />
@@ -1084,6 +1085,7 @@
     <item ID="112_eiffel_tower" Name="Nuniokota sostinė" />
     <item ID="112_eiffel_tower_ctf" Name="Paryžius" />
     <item ID="114_czech" Name="Pilsenas" />
+    <item ID="115_sweden" Name="Ledynas" />
     <item ID="116_himmelball" Name="Himelsdorf arena" />
     <item ID="117_eiffelball" Name="Eifelio stadionas" />
     <item ID="118_lostcityball" Name="Senasis stadionas" />
@@ -1108,7 +1110,7 @@
     <item ID="35_steppes" Name="Stepės" />
     <item ID="36_fishing_bay" Name="Žvejų įlanka" />
     <item ID="37_caucasus" Name="Kalnų perėja" />
-    <item ID="38_mannerheim_line" Name="Poliarinis regionas" />
+    <item ID="38_mannerheim_line" Name="Manerheimo linija" />
     <item ID="39_crimea" Name="Pietinis krantas" />
     <item ID="43_north_america" Name="Šiaurėsvakarai" />
     <item ID="44_north_america" Name="Laivoksas" />
@@ -1323,6 +1325,7 @@
     <achv ID_Num="118" ID="tankExpert6" Name="Ekspertas: Japonija" />
     <achv ID_Num="119" ID="tankExpert7" Name="Ekspertas: Čekoslovakija" />
     <achv ID_Num="120" ID="tankExpert8" Name="Ekspertas: Švedija" />
+    <achv ID_Num="122" ID="tankExpert10" Name="Ekspertas: Italija" />
     <achv ID_Num="127" ID="mechanicEngineer0" Name="Inžinierius mechanikas: SSRS" />
     <achv ID_Num="128" ID="mechanicEngineer1" Name="Inžinierius mechanikas: Vokietija" />
     <achv ID_Num="129" ID="mechanicEngineer2" Name="Inžinierius mechanikas: JAV" />
@@ -1333,6 +1336,7 @@
     <achv ID_Num="134" ID="mechanicEngineer7" Name="Inžinierius mechanikas: Čekoslovakija" />
     <achv ID_Num="135" ID="mechanicEngineer8" Name="Inžinierius mechanikas: Švedija" />
     <achv ID_Num="136" ID="mechanicEngineer9" Name="Inžinierius mechanikas: Lenkija" />
+    <achv ID_Num="137" ID="mechanicEngineer10" Name="Inžinierius mechanikas: Italija" />
     <achv ID_Num="143" ID="medalBrothersInArms" Name="Ginklo broliai" />
     <achv ID_Num="144" ID="medalCrucialContribution" Name="Lemiamas indėlis" />
     <achv ID_Num="145" ID="medalDeLanglade" Name="De Langlado medalis" />
@@ -2073,7 +2077,7 @@
     <PM name="SAP-6: Dievo kūjis" short="StuG IV: SAP-6" desc="Pagrindinė artilerijos užduotis - saviškių palaikymas ugnimi. Apkurtinti priešai negali sėkmingai kovoti, tad saviškiai tikrai turės iš to naudos. Šaudydami būkite atsargūs - apkurtinti galite ir savos komandos narius. Šaudymas į saviškius nebus toleruojamas." tMID="66" opID="1" mID="6" setID="5" ID="quest_1_5_6_main" secID="quest_1_5_6_add" minLvl="4" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 2 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 2 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -2787,7 +2791,7 @@ or
     <PM name="SAP-6: Dievo kūjis" short="T28 Heavy Tank Concept: SAP-6" desc="Pagrindinė artilerijos užduotis - saviškių palaikymas ugnimi. Apkurtinti priešai negali sėkmingai kovoti, tad saviškiai tikrai turės iš to naudos. Šaudydami būkite atsargūs - apkurtinti galite ir savos komandos narius. Šaudymas į saviškius nebus toleruojamas." tMID="141" opID="2" mID="6" setID="5" ID="quest_2_5_6_main" secID="quest_2_5_6_add" minLvl="5" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 3 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 3 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -3516,7 +3520,7 @@ or
     <PM name="SAP-6: Dievo kūjis" short="T 55A: SAP-6" desc="Pagrindinė artilerijos užduotis - saviškių palaikymas ugnimi. Apkurtinti priešai negali sėkmingai kovoti, tad saviškiai tikrai turės iš to naudos. Šaudydami būkite atsargūs - apkurtinti galite ir savos komandos narius. Šaudymas į saviškius nebus toleruojamas." tMID="216" opID="3" mID="6" setID="5" ID="quest_3_5_6_main" secID="quest_3_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 5 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 5 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -4250,7 +4254,7 @@ or
     <PM name="SAP-6: Dievo kūjis" short="Objektas 260: SAP-6" desc="Pagrindinė artilerijos užduotis - saviškių palaikymas ugnimi. Apkurtinti priešai negali sėkmingai kovoti, tad saviškiai tikrai turės iš to naudos. Šaudydami būkite atsargūs - apkurtinti galite ir savos komandos narius. Šaudymas į saviškius nebus toleruojamas." tMID="291" opID="4" mID="6" setID="5" ID="quest_4_5_6_main" secID="quest_4_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="Objektas 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 6 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 6 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -4960,7 +4964,7 @@ or
     <PM name="SAP-6: Dievo kūjis" short="StuG IV: SAP-6" desc="Pagrindinė artilerijos užduotis - saviškių palaikymas ugnimi. Apkurtinti priešai negali sėkmingai kovoti, tad saviškiai tikrai turės iš to naudos. Šaudydami būkite atsargūs - apkurtinti galite ir savos komandos narius. Šaudymas į saviškius nebus toleruojamas." tMID="66" opID="1" mID="6" setID="5" ID="fallout_1_5_6_main" secID="fallout_1_5_6_add" minLvl="4" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 2 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 2 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -5674,7 +5678,7 @@ or
     <PM name="SAP-6: Dievo kūjis" short="T28 Heavy Tank Concept: SAP-6" desc="Pagrindinė artilerijos užduotis - saviškių palaikymas ugnimi. Apkurtinti priešai negali sėkmingai kovoti, tad saviškiai tikrai turės iš to naudos. Šaudydami būkite atsargūs - apkurtinti galite ir savos komandos narius. Šaudymas į saviškius nebus toleruojamas." tMID="141" opID="2" mID="6" setID="5" ID="fallout_2_5_6_main" secID="fallout_2_5_6_add" minLvl="5" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 3 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 3 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -6403,7 +6407,7 @@ or
     <PM name="SAP-6: Dievo kūjis" short="T 55A: SAP-6" desc="Pagrindinė artilerijos užduotis - saviškių palaikymas ugnimi. Apkurtinti priešai negali sėkmingai kovoti, tad saviškiai tikrai turės iš to naudos. Šaudydami būkite atsargūs - apkurtinti galite ir savos komandos narius. Šaudymas į saviškius nebus toleruojamas." tMID="216" opID="3" mID="6" setID="5" ID="fallout_3_5_6_main" secID="fallout_3_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 5 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 5 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -7137,7 +7141,7 @@ or
     <PM name="SAP-6: Dievo kūjis" short="Objektas 260: SAP-6" desc="Pagrindinė artilerijos užduotis - saviškių palaikymas ugnimi. Apkurtinti priešai negali sėkmingai kovoti, tad saviškiai tikrai turės iš to naudos. Šaudydami būkite atsargūs - apkurtinti galite ir savos komandos narius. Šaudymas į saviškius nebus toleruojamas." tMID="291" opID="4" mID="6" setID="5" ID="fallout_4_5_6_main" secID="fallout_4_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="Objektas 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 6 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 6 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Win
