--- a/data/lang/zh.xml
+++ b/data/lang/zh.xml
@@ -200,6 +200,7 @@
     <tank ID="Ch39_WZ120_1G_FT" sName="WZ120-1G" lName="WZ120-1G" />
     <tank ID="Ch40_WZ120G_FT" sName="WZ120G" lName="WZ120G" />
     <tank ID="Ch41_WZ_111_5A" sName="111 5A" lName="111 5A" />
+    <tank ID="Ch41_WZ_111_QL" />
     <tank ID="Chi_Ha" sName="九七中战" lName="九七中战" />
     <tank ID="Chi_He" sName="一式中战" lName="一式中战" />
     <tank ID="Chi_Ni" sName="九七原型车" lName="九七原型车" />
@@ -1084,6 +1085,7 @@
     <item ID="112_eiffel_tower" Name="废都" />
     <item ID="112_eiffel_tower_ctf" Name="巴黎" />
     <item ID="114_czech" Name="布拉格" />
+    <item ID="115_sweden" />
     <item ID="116_himmelball" Name="锡城球场" />
     <item ID="117_eiffelball" Name="艾菲尔球场" />
     <item ID="118_lostcityball" Name="失落小镇球场" />
@@ -2072,7 +2074,7 @@
     <PM name="SPG-6:神之锤" short="IV号突击炮: SPG-6" desc="自行火炮的主要目标就是提供火力支援给队友。受到弹震影响的敌方坦克将会是很糟糕的战力，所以队友肯定会感谢您的协助。然而，开火时要注意:粗心的射击也会使盟友坦克陷入弹震状态。友军伤害是不被允许的。" tMID="66" opID="1" mID="6" setID="5" ID="quest_1_5_6_main" secID="quest_1_5_6_add" minLvl="4" maxLvl="10" campID="1" camp="迟来的支援" reward="IV号突击炮">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 2 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 2 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -2786,7 +2788,7 @@ or
     <PM name="SPG-6:神之锤" short="T28(概念车): SPG-6" desc="自行火炮的主要目标就是提供火力支援给队友。受到弹震影响的敌方坦克将会是很糟糕的战力，所以队友肯定会感谢您的协助。然而，开火时要注意:粗心的射击也会使盟友坦克陷入弹震状态。友军伤害是不被允许的。" tMID="141" opID="2" mID="6" setID="5" ID="quest_2_5_6_main" secID="quest_2_5_6_add" minLvl="5" maxLvl="10" campID="1" camp="迟来的支援" reward="T28(概念车)">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 3 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 3 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -3515,7 +3517,7 @@ or
     <PM name="SPG-6:神之锤" short="T-55A: SPG-6" desc="自行火炮的主要目标就是提供火力支援给队友。受到弹震影响的敌方坦克将会是很糟糕的战力，所以队友肯定会感谢您的协助。然而，开火时要注意:粗心的射击也会使盟友坦克陷入弹震状态。友军伤害是不被允许的。" tMID="216" opID="3" mID="6" setID="5" ID="quest_3_5_6_main" secID="quest_3_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="迟来的支援" reward="T-55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 5 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 5 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -4249,7 +4251,7 @@ or
     <PM name="SPG-6:神之锤" short="260工程: SPG-6" desc="自行火炮的主要目标就是提供火力支援给队友。受到弹震影响的敌方坦克将会是很糟糕的战力，所以队友肯定会感谢您的协助。然而，开火时要注意:粗心的射击也会使盟友坦克陷入弹震状态。友军伤害是不被允许的。" tMID="291" opID="4" mID="6" setID="5" ID="quest_4_5_6_main" secID="quest_4_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="迟来的支援" reward="260工程">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 6 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 6 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -4959,7 +4961,7 @@ or
     <PM name="SPG-6:神之锤" short="IV号突击炮: SPG-6" desc="自行火炮的主要目标就是提供火力支援给队友。受到弹震影响的敌方坦克将会是很糟糕的战力，所以队友肯定会感谢您的协助。然而，开火时要注意:粗心的射击也会使盟友坦克陷入弹震状态。友军伤害是不被允许的。" tMID="66" opID="1" mID="6" setID="5" ID="fallout_1_5_6_main" secID="fallout_1_5_6_add" minLvl="4" maxLvl="10" campID="1" camp="迟来的支援" reward="IV号突击炮">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 2 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 2 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -5673,7 +5675,7 @@ or
     <PM name="SPG-6:神之锤" short="T28(概念车): SPG-6" desc="自行火炮的主要目标就是提供火力支援给队友。受到弹震影响的敌方坦克将会是很糟糕的战力，所以队友肯定会感谢您的协助。然而，开火时要注意:粗心的射击也会使盟友坦克陷入弹震状态。友军伤害是不被允许的。" tMID="141" opID="2" mID="6" setID="5" ID="fallout_2_5_6_main" secID="fallout_2_5_6_add" minLvl="5" maxLvl="10" campID="1" camp="迟来的支援" reward="T28(概念车)">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 3 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 3 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Win</req>
@@ -6402,7 +6404,7 @@ or
     <PM name="SPG-6:神之锤" short="T-55A: SPG-6" desc="自行火炮的主要目标就是提供火力支援给队友。受到弹震影响的敌方坦克将会是很糟糕的战力，所以队友肯定会感谢您的协助。然而，开火时要注意:粗心的射击也会使盟友坦克陷入弹震状态。友军伤害是不被允许的。" tMID="216" opID="3" mID="6" setID="5" ID="fallout_3_5_6_main" secID="fallout_3_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="迟来的支援" reward="T-55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 5 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 5 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -7136,7 +7138,7 @@ or
     <PM name="SPG-6:神之锤" short="260工程: SPG-6" desc="自行火炮的主要目标就是提供火力支援给队友。受到弹震影响的敌方坦克将会是很糟糕的战力，所以队友肯定会感谢您的协助。然而，开火时要注意:粗心的射击也会使盟友坦克陷入弹震状态。友军伤害是不被允许的。" tMID="291" opID="4" mID="6" setID="5" ID="fallout_4_5_6_main" secID="fallout_4_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="迟来的支援" reward="260工程">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Enable your allies to cause damage to 6 vehicles by stunning or immobilizing them</req>
+        <req>•  Enable your allies to cause damage to 6 different vehicles by stunning or immobilizing them</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Win
